--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -169,7 +169,10 @@ endif()
 # ISSL Off-target Scoring Module Memory Mapped File #
 #####################################################
 # Add Library
-add_library(ISSLScoringModuleMMF STATIC ${CMAKE_SOURCE_DIR}/lib/ISSLScoringModuleMMF.cpp ${CMAKE_SOURCE_DIR}/include/ISSLScoringModuleMMF.hpp)
+add_library(ISSLScoringModuleMMF 
+    STATIC ${CMAKE_SOURCE_DIR}/lib/ISSLScoringModuleMMF.cpp 
+    ${CMAKE_SOURCE_DIR}/include/ISSLScoringModuleMMF.hpp
+)
 # Link OpenMP if available
 if(OpenMP_CXX_FOUND)
     target_link_libraries(ISSLScoringModuleMMF 
