Added ability to toggle memory mapped file

--- a/tests/data/test_config.ini
+++ b/tests/data/test_config.ini
@@ -85,6 +85,13 @@ delimiter = ,
 ; Default: True
 enabled = True
 
+; Enable memory mapped files for ISSL index
+; The ISSL index can be very large and exceed the memory available on the computer.
+; By enabling memory mapped files a larger index can be used without the need to 
+; load the index entire index into physical memory.
+; Default = True
+memory-mapped = True
+
 ; Which scoring method to use?
 ; Options: mit, cfd, and, or, avg
 ; mit - Fail when MIT drops below score-threshold
