--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,26 @@
 ﻿# CMakeList.txt : Main CMake file for CracklingPlusPlus
 cmake_minimum_required (VERSION 3.8)
 
-# Set CXX Standard for project
-set(CMAKE_CXX_STANDARD 17 CACHE STRING "The C++ standard to use")
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
-# Update to use target compile flags. temp solution
-#if(NOT CMAKE_BUILD_TYPE)
-	#set(CMAKE_BUILD_TYPE Release)
-#endif()
-
-#set(CMAKE_CXX_FLAGS "")
-#set(CMAKE_CXX_FLAGS_DEBUG "-G")
-#set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-
 # Project name, version and description
 project ("CracklingPlusPlus" LANGUAGES CXX C VERSION 1.0.0 DESCRIPTION "C++ version of Crackling" )
 
-# Add source to this project's executable.
-add_executable (${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/CracklingPlusPlus.cpp)
+# Set CXX Standard for project
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Optimisation flags
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 /O2")
 
 # Add library subdirectory
 add_subdirectory (${CMAKE_SOURCE_DIR}/lib)
 
+# Boost
 find_package(Boost REQUIRED COMPONENTS regex iostreams)
+
+# Add source to this project's executable.
+add_executable (${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/CracklingPlusPlus.cpp)
 
 # Link Libraries to main executable
 target_link_libraries (
@@ -49,6 +45,9 @@ target_link_libraries (
 add_subdirectory (${CMAKE_SOURCE_DIR}/ISSLCreateIndex)
 
 # Added ISSLCreateIndex subdirectory
+add_subdirectory (${CMAKE_SOURCE_DIR}/ISSLScoreOfftargets)
+
+# Added ExtractOffTargets subdirectory
 add_subdirectory (${CMAKE_SOURCE_DIR}/ExtractOfftargets)
 
 # Add tests subdirectory
