Added code to count off targets processed

--- a/ISSLCreateIndex/CMakeLists.txt
+++ b/ISSLCreateIndex/CMakeLists.txt
@@ -1,9 +1,9 @@
+# Boost
+find_package(Boost REQUIRED COMPONENTS iostreams)
+
+# OpenMP
+find_package(OpenMP REQUIRED)
+
 # Add ISSLCreateIndex executable
 add_executable (ISSLCreateIndex ISSLCreateIndex.cpp ISSLCreateIndex.hpp)
-
-# Find OpenMP
-find_package(OpenMP)
-# Link OpenMP if available
-if(OpenMP_CXX_FOUND)
-    target_link_libraries(ISSLCreateIndex PRIVATE OpenMP::OpenMP_CXX)
-endif()
+target_link_libraries(ISSLCreateIndex PRIVATE Boost::dynamic_linking Boost::iostreams OpenMP::OpenMP_CXX)
